# mk2_arm

./: .gitmodules  README.md  source_mk2_arm.sh
can_sender_pkg/: package.xml  setup.cfg  setup.py
can_sender_pkg/can_sender_pkg/: can_sender.py
mk2_arm/: .setup_assistant  CMakeLists.txt  package.xml
mk2_arm/config/: bio_ik_kinematics.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_cpp.yaml  ros2_controllers.yaml  servo_config.yaml  simplified_arm_assembly.ros2_control.xacro  simplified_arm_assembly.srdf  simplified_arm_assembly.urdf.xacro
mk2_arm/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  my_launch.py  rsp.launch.py  servo_launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mk2_arm/launch/log/: latest_list
mk2_arm/log/: latest_list
mk2_arm/scripts/: joint_publisher_can.py  joint_publisher_serial.py  movement_test.py
mk2_arm/scripts/log/: latest_list
mk2_arm/src/: servo_keyboard_input.cpp
simplified_arm_assembly/: package.xml  setup.cfg  setup.py
simplified_arm_assembly/config/: joint_names_simplified_arm_assembly.yaml
simplified_arm_assembly/launch/: launch.py
simplified_arm_assembly/meshes/: module_joint.STL  pitch_1.STL  pitch_3.STL  pitch_5.STL  roll_2.STL  roll_4.STL  roll_6.STL
simplified_arm_assembly/urdf/: simplified_arm_assembly.csv  simplified_arm_assembly.urdf
simplified_arm_assembly/urdf/log/: latest_list
